--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -127,6 +127,7 @@ public with sharing class stoInboxHelper {
             returntext.messageText = cn.CRM_Conversation_Note__c; 
             returntext.recordId = cn.Id; 
         }
+        returntext.messageText = returntext.messageText.replaceAll('<[^>]+>', ' ').replaceAll('(\\r|\\n)+', ' ').left(64);
         return returntext;
     }
 
