Revert "avoid returnin bad request"
This reverts commit e6171e647490a1becba5ad38ed9aec85ffd5b4ae.

--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -150,8 +150,7 @@ public with sharing class stoInboxHelper {
             returntext.messageText = cn.CRM_Conversation_Note__c;
             returntext.recordId = cn.Id;
         }
-
-        returntext.messageText = returntext.messageText != null ? returntext.messageText.replaceAll('<[^>]+>', ' ').replaceAll('(\\r|\\n)+', ' '): '';
+        returntext.messageText = returntext.messageText.replaceAll('<[^>]+>', ' ').replaceAll('(\\r|\\n)+', ' ');
         return returntext;
     }
 
