Adds theme and date to related link

--- a/force-app/main/default/classes/relatedConversationNoteHelper.cls
+++ b/force-app/main/default/classes/relatedConversationNoteHelper.cls
@@ -11,7 +11,7 @@ public with sharing class relatedConversationNoteHelper {
         List<Conversation_Note__c> related;
         if (behandlingskjede == behandlingsid || behandlingskjede == apiRef) {
             related = [
-                SELECT Id
+                SELECT Id, CRM_Theme__r.Name, CRM_Date_Registered__c
                 FROM Conversation_Note__c
                 WHERE
                     CRM_Henvendelse_BehandlingskjedeId__c = :behandlingskjede
@@ -22,7 +22,7 @@ public with sharing class relatedConversationNoteHelper {
             ];
         } else {
             related = [
-                SELECT Id
+                SELECT Id, CRM_Theme__r.Name, CRM_Date_Registered__c
                 FROM Conversation_Note__c
                 WHERE CRM_Henvendelse_BehandlingsId__c = :behandlingskjede OR CRM_API_Reference__c = :behandlingskjede
             ];
