Better design for related conversation note

--- a/force-app/main/default/classes/relatedConversationNoteHelper.cls
+++ b/force-app/main/default/classes/relatedConversationNoteHelper.cls
@@ -11,7 +11,7 @@ public with sharing class relatedConversationNoteHelper {
         List<Conversation_Note__c> related;
         if (behandlingskjede == behandlingsid || behandlingskjede == apiRef) {
             related = [
-                SELECT Id, CRM_Theme__r.Name, CRM_Date_Registered__c
+                SELECT Id, CRM_Theme__r.Name, CRM_Date_Time_Registered__c
                 FROM Conversation_Note__c
                 WHERE
                     CRM_Henvendelse_BehandlingskjedeId__c = :behandlingskjede
@@ -19,12 +19,14 @@ public with sharing class relatedConversationNoteHelper {
                     AND CRM_Henvendelse_BehandlingsId__c != NULL)
                     OR (CRM_API_Reference__c != :apiRef
                     AND CRM_API_Reference__c != NULL))
+                ORDER BY CRM_Date_Time_Registered__c DESC
             ];
         } else {
             related = [
-                SELECT Id, CRM_Theme__r.Name, CRM_Date_Registered__c
+                SELECT Id, CRM_Theme__r.Name, CRM_Date_Time_Registered__c
                 FROM Conversation_Note__c
                 WHERE CRM_Henvendelse_BehandlingsId__c = :behandlingskjede OR CRM_API_Reference__c = :behandlingskjede
+                ORDER BY CRM_Date_Time_Registered__c DESC
             ];
         }
         return related;
