--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -27,23 +27,26 @@ public with sharing class stoInboxHelper {
             ORDER BY CRM_Latest_Message_Datetime__c DESC
         ];
         for (Thread__c t : threadList) {
-            thread i = new thread();
-            message m = new message();
-            i.name = t.STO_ExternalName__c;
-            i.recordId = t.CRM_Thread_Type__c == 'CHAT' ? t.CRM_Related_Object__c : t.Id;
-            i.lastModifiedDate = t.LastModifiedDate;
-            i.closeDate = t.CRM_Closed_Date__c;
-            i.numberOfUnreadMessages = t.CRM_Number_of_unread_Messages__c;
-            i.latestMessageDate = t.CRM_Latest_Message_Datetime__c;
-            i.objectName = t.CRM_Thread_Type__c == 'CHAT' ? 'chat' : 'skriv-til-oss';
-            i.status = (t.CRM_Is_Closed__c) ? 'Lukket' : 'Åpen';
-            m.recordId = t.Messages__r[0]?.Id;
-            m.messageText = t.Messages__r[0]
-                ?.CRM_Message_Text__c.replaceAll('<[^>]+>', ' ')
-                .replaceAll('(\\r|\\n)+', ' ');
-            m.isExternal = t.Messages__r[0]?.CRM_External_Message__c;
-            i.latestmessage = m;
-            inboxlist.add(i);
+            if (t.Messages__r != null && t.Messages__r.size() > 0) {
+                thread i = new thread();
+                message m = new message();
+                i.name = t.STO_ExternalName__c;
+                i.recordId = t.CRM_Thread_Type__c == 'CHAT' ? t.CRM_Related_Object__c : t.Id;
+                i.lastModifiedDate = t.LastModifiedDate;
+                i.closeDate = t.CRM_Closed_Date__c;
+                i.numberOfUnreadMessages = t.CRM_Number_of_unread_Messages__c;
+                i.latestMessageDate = t.CRM_Latest_Message_Datetime__c;
+                i.objectName = t.CRM_Thread_Type__c == 'CHAT' ? 'chat' : 'skriv-til-oss';
+                i.status = (t.CRM_Is_Closed__c) ? 'Lukket' : 'Åpen';
+                m.recordId = t.Messages__r[0]?.Id;
+                m.messageText = t.Messages__r[0]
+                    ?.CRM_Message_Text__c
+                    ?.replaceAll('<[^>]+>', ' ')
+                    .replaceAll('(\\r|\\n)+', ' ');
+                m.isExternal = t.Messages__r[0]?.CRM_External_Message__c;
+                i.latestmessage = m;
+                inboxlist.add(i);
+            }
         }
         List<Conversation_Note__c> noteList = [
             SELECT Id, LastModifiedDate, CRM_Date_Time_Registered__c, STO_External_Name__c, CRM_Conversation_Note__c
@@ -96,23 +99,26 @@ public with sharing class stoInboxHelper {
             ORDER BY CRM_Latest_Message_Datetime__c DESC
         ];
         for (Thread__c t : threadList) {
-            thread i = new thread();
-            message m = new message();
-            i.name = t.STO_ExternalName__c;
-            i.recordId = t.CRM_Thread_Type__c == 'CHAT' ? t.CRM_Related_Object__c : t.Id;
-            i.lastModifiedDate = t.LastModifiedDate;
-            i.closeDate = t.CRM_Closed_Date__c;
-            i.numberOfUnreadMessages = t.CRM_Number_of_unread_Messages__c;
-            i.latestMessageDate = t.CRM_Latest_Message_Datetime__c;
-            i.objectName = t.CRM_Thread_Type__c == 'CHAT' ? 'chat' : 'skriv-til-oss';
-            i.status = (t.CRM_Is_Closed__c) ? 'Lukket' : 'Åpen';
-            m.recordId = t.Messages__r[0]?.Id;
-            m.messageText = t.Messages__r[0]
-                ?.CRM_Message_Text__c.replaceAll('<[^>]+>', ' ')
-                .replaceAll('(\\r|\\n)+', ' ');
-            m.isExternal = t.Messages__r[0]?.CRM_External_Message__c;
-            i.latestmessage = m;
-            inboxlist.add(i);
+            if (t.Messages__r != null && t.Messages__r.size() > 0) {
+                thread i = new thread();
+                message m = new message();
+                i.name = t.STO_ExternalName__c;
+                i.recordId = t.CRM_Thread_Type__c == 'CHAT' ? t.CRM_Related_Object__c : t.Id;
+                i.lastModifiedDate = t.LastModifiedDate;
+                i.closeDate = t.CRM_Closed_Date__c;
+                i.numberOfUnreadMessages = t.CRM_Number_of_unread_Messages__c;
+                i.latestMessageDate = t.CRM_Latest_Message_Datetime__c;
+                i.objectName = t.CRM_Thread_Type__c == 'CHAT' ? 'chat' : 'skriv-til-oss';
+                i.status = (t.CRM_Is_Closed__c) ? 'Lukket' : 'Åpen';
+                m.recordId = t.Messages__r[0]?.Id;
+                m.messageText = t.Messages__r[0]
+                    ?.CRM_Message_Text__c
+                    ?.replaceAll('<[^>]+>', ' ')
+                    .replaceAll('(\\r|\\n)+', ' ');
+                m.isExternal = t.Messages__r[0]?.CRM_External_Message__c;
+                i.latestmessage = m;
+                inboxlist.add(i);
+            }
         }
         List<Conversation_Note__c> noteList = [
             SELECT Id, LastModifiedDate, CRM_Date_Time_Registered__c, STO_External_Name__c, CRM_Conversation_Note__c
