--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -12,7 +12,8 @@ public with sharing class stoInboxHelper {
                 CRM_Latest_Message_Datetime__c,
                 CRM_Closed_Date__c,
                 STO_ExternalName__c,
-                CRM_Is_Closed__C
+                CRM_Is_Closed__C,
+                Name
             FROM Thread__c
             WHERE CRM_Number_of_unread_Messages__c = 0 AND CRM_Is_Closed__C = TRUE
             ORDER BY CRM_Latest_Message_Datetime__c DESC
@@ -27,10 +28,11 @@ public with sharing class stoInboxHelper {
             i.latestMessageDate = t.CRM_Latest_Message_Datetime__c;
             i.objectName = 'skriv-til-oss';
             i.status = (t.CRM_Is_Closed__C) ? 'Lukket' : 'Åpen';
+            i.recordName = t.Name;
             inboxlist.add(i);
         }
         List<Conversation_Note__c> noteList = [
-            SELECT Id, LastModifiedDate, CRM_Date_Time_Registered__c, STO_External_Name__c
+            SELECT Id, LastModifiedDate, CRM_Date_Time_Registered__c, STO_External_Name__c, Name
             FROM Conversation_Note__c
             WHERE CRM_Is_Read__c = TRUE AND CRM_Created_By_Ident__c != NULL
             ORDER BY CRM_Date_Time_Registered__c DESC
@@ -45,6 +47,7 @@ public with sharing class stoInboxHelper {
             i.latestMessageDate = t.CRM_Date_Time_Registered__c;
             i.objectName = 'samtalereferat';
             i.status = 'Lukket';
+            i.recordName = t.Name;
             inboxlist.add(i);
         }
         return inboxlist;
@@ -61,7 +64,8 @@ public with sharing class stoInboxHelper {
                 CRM_Latest_Message_Datetime__c,
                 CRM_Closed_Date__c,
                 STO_ExternalName__c,
-                CRM_Is_Closed__C
+                CRM_Is_Closed__C,
+                Name
             FROM Thread__c
             WHERE CRM_Number_of_unread_Messages__c > 0 OR CRM_Is_Closed__c = FALSE
             ORDER BY CRM_Latest_Message_Datetime__c DESC
@@ -76,10 +80,11 @@ public with sharing class stoInboxHelper {
             i.latestMessageDate = t.CRM_Latest_Message_Datetime__c;
             i.objectName = 'skriv-til-oss';
             i.status = (t.CRM_Is_Closed__C) ? 'Lukket' : 'Åpen';
+            i.recordName = t.Name;
             inboxlist.add(i);
         }
         List<Conversation_Note__c> noteList = [
-            SELECT Id, LastModifiedDate, CRM_Date_Time_Registered__c, STO_External_Name__c
+            SELECT Id, LastModifiedDate, CRM_Date_Time_Registered__c, STO_External_Name__c, Name
             FROM Conversation_Note__c
             WHERE CRM_Is_Read__c = FALSE AND CRM_Created_By_Ident__c != NULL
             ORDER BY CRM_Date_Time_Registered__c DESC
@@ -94,6 +99,7 @@ public with sharing class stoInboxHelper {
             i.latestMessageDate = t.CRM_Date_Time_Registered__c;
             i.objectName = 'samtalereferat';
             i.status = 'Lukket';
+            i.recordName = t.Name;
             inboxlist.add(i);
         }
         return inboxlist;
@@ -116,6 +122,8 @@ public with sharing class stoInboxHelper {
         public String objectName;
         @AuraEnabled
         public String status;
+        @AuraEnabled
+        public String recordName;
     }
 
     @AuraEnabled(cacheable=true)
@@ -127,12 +135,12 @@ public with sharing class stoInboxHelper {
             Message__c messageList = [
                 SELECT Id, CRM_Message_Text__c, CRM_External_Message__c
                 FROM Message__c
-                WHERE CRM_Thread__c = :threadId AND ( CRM_Type__c = 'Message' OR CRM_Type__c = 'Info' )
+                WHERE CRM_Thread__c = :threadId AND (CRM_Type__c = 'Message' OR CRM_Type__c = 'Info')
                 ORDER BY CRM_Sent_Datetime_Formula__c DESC
                 LIMIT 1
             ];
-            returntext.messageText = messageList.CRM_Message_Text__c; 
-            returntext.recordId = messageList.Id; 
+            returntext.messageText = messageList.CRM_Message_Text__c;
+            returntext.recordId = messageList.Id;
             returntext.isExternal = messageList.CRM_External_Message__c;
         }
         if (objectName == 'Conversation_Note__c') {
