Shows only STO/B in innboks and fix logging

--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -74,7 +74,7 @@ public with sharing class stoHelperClass {
         try {
             insert thread;
         } catch (DmlException e) {
-            logger.exception(e);
+            logger.exception(e, CRM_ApplicationDomain.Domain.NKS);
             logger.publish();
         }
         return thread;
@@ -88,7 +88,7 @@ public with sharing class stoHelperClass {
         try {
             insert msg;
         } catch (DmlException e) {
-            logger.exception(e);
+            logger.exception(e, CRM_ApplicationDomain.Domain.NKS);
             logger.publish();
         }
     }
