--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -41,7 +41,7 @@ public with sharing class stoHelperClass {
      * @date 08.06.21
      */
     @AuraEnabled
-    public static Id createRequest(String theme, String msgText) {
+    public static Thread__c createRequest(String theme, String msgText) {
         String relatedObjId;
         Thread__c thread;
 
@@ -50,7 +50,7 @@ public with sharing class stoHelperClass {
         thread = createThread(null, theme, personUser);
         createMessage(thread, msgText, personUser.ContactId);
 
-        return thread.Id;
+        return thread;
     }
 
     private static Thread__c createThread(String relatedObjId, String theme, User personUser) {
