--- a/force-app/main/default/classes/stoUtilityBackgroundController.cls
+++ b/force-app/main/default/classes/stoUtilityBackgroundController.cls
@@ -4,9 +4,9 @@ public with sharing class stoUtilityBackgroundController {
         try {
             String tabname;
             SObjectType objectName = Id.valueOf(recordId).getSobjectType();
-             if (objectName == Schema.Case.getSObjectType()) {
+            if (objectName == Schema.Case.getSObjectType()) {
                 Case c = [SELECT STO_Category__c, Id, Origin FROM Case WHERE Id = :recordId LIMIT 1];
-                if(c.STO_Category__c != null){
+                if (c.STO_Category__c != null) {
                     tabname = c.STO_Category__c;
                 }
             }
@@ -22,6 +22,6 @@ public with sharing class stoUtilityBackgroundController {
             [SELECT Id FROM ServicePresenceStatus WHERE DeveloperName = 'Skriv_til_oss']
             ?.Id
         );
-        return statusId.substring(0, 15);
+        return String.isNotBlank(statusId) ? statusId.substring(0, 15) : null;
     }
 }
