Revert signature change

--- a/force-app/main/default/classes/stoUtilityBackgroundController.cls
+++ b/force-app/main/default/classes/stoUtilityBackgroundController.cls
@@ -22,6 +22,6 @@ public with sharing class stoUtilityBackgroundController {
             [SELECT Id FROM ServicePresenceStatus WHERE DeveloperName = 'Skriv_til_oss']
             ?.Id
         );
-        return String.isNotBlank(statusId) ? statusId.substring(0, 15) : null;
+        return statusId.substring(0, 15);
     }
 }
