--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -121,8 +121,17 @@ public with sharing class stoHelperClass {
                 CRM_Latest_Message_Datetime__c,
                 CRM_Closed_Date__c,
                 STO_ExternalName__c,
-                CRM_Is_Closed__C,
-                Name
+                CRM_Is_Closed__c,
+                CRM_Thread_Type__c,
+                CRM_Related_Object__c,
+                Name,
+                (
+                    SELECT Id, CRM_Message_Text__c, CRM_External_Message__c
+                    FROM Messages__r
+                    WHERE CRM_Type__c = 'Message' OR CRM_Type__c = 'Info'
+                    ORDER BY CRM_Sent_Datetime_Formula__c DESC
+                    LIMIT 1
+                )
             FROM Thread__c
             WHERE CRM_Is_Closed__C = FALSE AND CRM_Thread_Type__c IN ('STO', 'STB') AND STO_Category__c = :category
             ORDER BY CRM_Latest_Message_Datetime__c DESC
